<?xml version="1.0" encoding="utf-8"?>
<!-- 
* Programmer: David Charles
* Class ID: dcharl1678
* Lab02
* CIS 2610: Business Mobile Programming
* Fall 2013
* Due date: 10/16/13
* Date completed: 10/13/13
*************************************
added a couple of strings resources
4 strings for the radio group 
1 for the hint
1 for the title bar
1 for the title

*************************************!-->
<resources>

    <string name="app_name">Lab02.dcharl1678</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="s4">Samsumg Galaxy S4 -$4.00</string>
    <string name="g2">LG G2 -$3.52</string>
    <string name="hone">HTC One-$3.10</string>
    <string name="n4">LG Nexus 4-$2.00</string>
    <string name="buyText">Buy it!</string>
    <string name="hint">How many do you want to buy?</string>
    <string name="resultText"></string>
    <string name="title">Super Smart Phones have the best Smart Phones for the best price</string>
    <string name="smartphones">smartphones</string>
    <string name="titleBar">Super Smart Phones</string>

</resources>
